# octasoma

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  Makefile  README.md  install.sh
.github/workflows/: ci.yml  release.yml
bench/: sample_nodes.tsv  sample_queries.tsv
docs/: agent.md  api.md  architecture.md  evaluation.md  file-format.md  integration-ecosystem.md  integration-kernel.md  octacore.md  positioning.md  precision-sketch.md  scirust-improvements.md
examples/: agent_demo.rs  benchmark.rs  ccos_bridge.rs  compare_memory.rs  fractal_zoom.rs  kernel_loop.rs  kv_cache_viz.rs  octacore_cascade.rs  pipeline_bench.rs  pipeline_bench_text.rs  precision_sketch.rs  recall_law.rs  scored_viz.rs  slha_prefilter.rs
integration/ccos/: PATCH.md  octa_index.rs
octacore/: Cargo.toml  LICENSE  LICENSING.md  OCTACORE_HANDOFF.md  README.md
octacore/.github/workflows/: ci.yml
octacore/examples/: cascade_demo.rs  recall_global_bench.rs  semantic_queries.tsv
octacore/src/: lib.rs  mcp.rs
paper/: README.md  refs.bib
paper/en/: main.tex
paper/fr/: main.tex
scripts/: ccos_octasoma_demo.sh  extract_octacore.sh  rs_to_nodes.sh
src/: agent.rs  calibration.rs  conformal.rs  embed.rs  explain.rs  feedback.rs  fileguard.rs  fractal.rs  gpu.rs  hybrid.rs  kernel.rs  lib.rs  metrics.rs  sharded.rs  sketch.rs
tests/: agent_kernel.rs  ccos_adapter.rs  determinism.rs  edge_cases.rs  invariants.rs  mcp_server.rs  oracle_ops.rs  persistence_fuzz.rs  property_knn.rs  recall_gate.rs  stress.rs
tests/common/: mod.rs
viewer/: README.md  index.html
