[package]
name = "octasoma"
version = "0.4.0"
edition = "2024"
description = "3D fractal semantic memory engine: learned PCA/JL projection, bucket PR-octree, exact 3-D k-NN, and LZ4-compressed persistence — 100% safe, stable Rust"
license = "PolyForm-Noncommercial-1.0.0"
readme = "README.md"
repository = "https://github.com/checkupauto/octasoma"
keywords = ["octree", "semantic-memory", "knn", "pca", "embeddings"]
categories = ["data-structures", "science", "algorithms"]

[lib]
name = "octasoma"

[dependencies]
# The only *default* runtime dependency: a fast, pure-Rust LZ4 codec for payload
# persistence. The agent layer and the HTTP (Ollama) embedder use only std.
lz4_flex = "0.11"
# Optional: pulled in only for the `mcp` feature (the JSON-RPC MCP server binary).
serde_json = { version = "1", optional = true }

[features]
# Builds the `octasoma-mcp` stdio JSON-RPC server (a connector for CCOS / agents).
mcp = ["dep:serde_json"]

[[bin]]
name = "octasoma-mcp"
required-features = ["mcp"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
