[package]
name = "octasoma"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
description = "3D fractal semantic memory engine: learned PCA/JL projection, bucket PR-octree, exact 3-D k-NN, and LZ4-compressed persistence — 100% safe, stable Rust"
license = "LicenseRef-CheckupAuto-Dual"
readme = "README.md"
repository = "https://github.com/Memorithm/octasoma"
keywords = ["octree", "semantic-memory", "knn", "pca", "embeddings"]
categories = ["data-structures", "science", "algorithms"]

[lib]
name = "octasoma"

[dependencies]
# The only *default* runtime dependency: a fast, pure-Rust LZ4 codec for payload
# persistence. The agent layer and the HTTP (Ollama) embedder use only std.
lz4_flex = "0.11"
# Optional: pulled in only for the `mcp` feature (the JSON-RPC MCP server binary).
serde_json = { version = "1", optional = true }
# Optional: runtime-dispatched SIMD kernels (AVX2/SSE2/NEON with a scalar
# fallback) from the org's SciRust framework, pinned to a reviewed rev. Pulled in
# only by the `simd` feature below; the default build keeps zero SciRust deps.
scirust-simd = { git = "https://github.com/CHECKUPAUTO/scirust", rev = "edc94457773c4a83bd119ba362a50d6a189cfe69", optional = true }
# Optional: the `gpu` feature only (proposal A5) — batched Q·Eᵀ scoring as one
# WGSL GEMM. The kernel is vendored from scirust-gpu (its `wgpu` cargo feature
# would drag scirust-core); tolerance-validated against the CPU path, never the
# default. CI exercises it on Mesa lavapipe (software Vulkan).
wgpu = { version = "0.20", optional = true }
pollster = { version = "0.3", optional = true }
bytemuck = { version = "1", optional = true }

[features]
# Builds the `octasoma-mcp` stdio JSON-RPC server (a connector for CCOS / agents).
mcp = ["dep:serde_json"]
# Opt-in **SIMD exact rerank** (proposal A2 of docs/scirust-improvements.md): the
# rerank dot product — the PrecisionSketch hot path, `scores()` and the certify
# oracle — dispatches to scirust-simd's runtime-detected AVX2/SSE2/NEON kernel
# (4–8× at 768-d). SIMD accumulation order differs from the scalar default, so
# scores can move in the last float bits and near-tie rankings may differ across
# builds/platforms — the flag IS that trade, stated plainly. Everything that
# persists (SimHash sketch bits, embeddings) stays on the scalar/f64 paths, so
# stores remain byte-portable across the flag. (A3 — SIMD sketching — is
# deliberately NOT here: sketch bits persist on disk, so flipping their compute
# path under a feature flag could silently degrade existing stores; it needs a
# store-level format marker first.)
simd = ["dep:scirust-simd"]
# Opt-in **GPU batch scoring** (A5): SketchIndex::scores_batch_gpu computes all
# queries × items cosines as one GEMM (viewer heat-maps, global recall,
# benchmark sweeps — the workloads that score everything). GPU accumulation is
# NOT bit-identical to the scalar path: tolerance-validated, never the default;
# no adapter → an honest Unsupported error. F32 tier only. See src/gpu.rs.
gpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]

[dev-dependencies]
# NSGA-II for the offline Pareto tuning example (proposal C3) — a
# **dev-dependency only** (the accepted policy): the library build stays at one
# dependency; rand/rayon/tracing enter only when building examples/tests.
# Pinned to the same reviewed scirust rev as the optional `simd` runtime dep.
scirust-evo = { git = "https://github.com/CHECKUPAUTO/scirust", rev = "edc94457773c4a83bd119ba362a50d6a189cfe69" }
# Symbolic regression for the offline recall-law example (proposal C4) — same
# dev-only policy and the same pinned rev; pulls only scirust-symbolic.
scirust-symreg = { git = "https://github.com/CHECKUPAUTO/scirust", rev = "edc94457773c4a83bd119ba362a50d6a189cfe69" }

[[bin]]
name = "octasoma-mcp"
required-features = ["mcp"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
